<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_normal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="24dp"
        android:text="@string/manage_followed_players"
        android:textAppearance="?textAppearanceHeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_player"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/player_name"
        android:labelFor="@id/menu_tagged_player"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_remove_followed_player"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit"
        android:hint="@string/unfollow"
        android:labelFor="@id/menu_followed_player"
        app:layout_constraintTop_toBottomOf="@id/til_add_player"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Normal">

        <AutoCompleteTextView
            android:id="@+id/menu_followed_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_follow_player"
        style="?buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_unit"
        android:layout_marginBottom="4dp"
        android:text="@string/follow"
        app:layout_constraintBottom_toBottomOf="@id/til_add_player"
        app:layout_constraintEnd_toEndOf="@id/til_add_player" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_unfollow_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/unfollow_all"
        app:backgroundTint="?colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_remove_followed_player" />
</androidx.constraintlayout.widget.ConstraintLayout>