<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_normal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="24dp"
        android:text="@string/manage_tags"
        android:textAppearance="?textAppearanceHeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tagged_player"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/tagged_players"
        android:labelFor="@id/menu_tagged_player"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Normal"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/menu_tagged_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_delete_tag"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/delete_tag_for_all_players"
        android:labelFor="@id/menu_delete_tag"
        app:layout_constraintTop_toBottomOf="@+id/til_tagged_player"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Normal"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/menu_delete_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit"
        android:hint="@string/tag_new_player"
        app:layout_constraintTop_toBottomOf="@+id/til_delete_tag"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Normal"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_tag"
        style="?buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_unit"
        android:layout_marginBottom="4dp"
        android:text="@string/add_tag"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/til_add_player"
        app:layout_constraintEnd_toEndOf="@id/til_add_player" />

    <LinearLayout
        android:id="@+id/tag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_outlined_cornered_padding_box"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintTop_toBottomOf="@id/til_add_player">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAppearance="?textAppearanceTitleMedium"
            android:textColor="?colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_unit"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="3" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clear_all_tags"
        app:backgroundTint="?colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_container" />
</androidx.constraintlayout.widget.ConstraintLayout>