<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_normal"
    android:paddingVertical="@dimen/spacing_normal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:elevation="2dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_icon" />

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        tools:text="v1.1.0.r125" />

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit"
        android:text="@string/about_text"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_version_name" />

    <TextView
        android:id="@+id/tv_credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit"
        android:text="@string/credits"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_caption"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_unit"
        android:text="@string/copyright"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_credits"
        app:layout_constraintTop_toBottomOf="@+id/tv_credits" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/check_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_copyright"
        app:strokeColor="@color/material_on_surface_stroke" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_donate"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_unit"
        android:text="@string/donate"
        app:layout_constraintEnd_toStartOf="@id/btn_update"
        app:layout_constraintTop_toTopOf="@id/btn_update" />
</androidx.constraintlayout.widget.ConstraintLayout>
